broken ui fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,3 +4,14 @@
 body {
   min-height: 100vh;
 }
+
+@layer utilities {
+  .scrollbar-hidden {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+  }
+}
